facebook: Update the DB only for new and modified entries

GFBGraph 0.2.2 offers the "updated_date" provided by the Facebook
Graph API, so we can use it to check if a photo requires a complete
update of its properties or not.

https://bugzilla.gnome.org/show_bug.cgi?id=719729